# state-space-mpc

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  collab.txt  main.py  model_update_notes_for_davide.md  pyproject.toml  requirements.txt  scaler.model  scaler_test.scale  scaler_train.scale  setup.py
data/MR24-030 Experiment/: MR24-030-MasterDataTable.xlsx  MR24-030-daily_feed.csv  MR24-030-total_feed.csv  MR24-030.yaml
data/SAM-1000L-B7H4-experiment/: SAM-1000L-B7H4.yaml  (+16 more)
data/SAM-1000L-B7H4-experiment-CTM1-test/: SAM-1000L-B7H4-CTM1-MasterDataTable.json  SAM-1000L-B7H4-CTM1-MasterDataTable.xlsx  SAM-1000L-B7H4-CTM1.yaml  graphs.ipynb  json_conversion.ipynb
data/SAM-1000L-B7H4-experiment-CTM2-test/: SAM-1000L-B7H4-CTM2-MasterDataTable.json  SAM-1000L-B7H4-CTM2-MasterDataTable.xlsx  json_conversion.ipynb
docs/: Makefile  conf.py  index.rst  make.bat  moving_horizon_estimation.md
notebooks/: State_Estimator_Comparison.ipynb  animation-exploratory.ipynb  excel_to_word_newsletter.ipynb  kalman_filter.ipynb  our_data_analysis.ipynb  raman-spectra-exploratory.ipynb  soft-sensor-exploration.ipynb  state_space_notebook.ipynb  testbook.ipynb
src/: clean_data.py  control.py  create_model_obj.py  estimation.py  estimation_loop-mr24_030_copy.py  estimation_loop.py  estimation_loop_tech_sim.py  generate_model.py  generate_report.py  main.py  module_tester.py  mpc_graphs.py  mpc_graphs_3L.py  mpc_graphs_pro.py  optimize_estimation.py  plot_residuals.py  run_simulations.py
templates/: experiment_config_template_B38.yaml  model_update_notes_for_davide.md
(+1047 files in other folders)
